# SpellingCorrector

./: .gitignore  CMakeLists.txt  Pinyin.cpp  Pinyin.h  README.md  SpellingCorrector.cpp  SpellingCorrector.h  SpellingCorrectorForZhCN.cpp  SpellingCorrectorForZhCN.h  main.cpp
test_file/: character.txt  test.zh
